# RuView

./: .gitignore  .mcp.json  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  verify
.claude/: settings.json  settings.local.json
.claude-flow/: CAPABILITIES.md
.claude/helpers/: auto-commit.sh  auto-memory-hook.mjs  intelligence.cjs  learning-service.mjs  statusline.cjs
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  clone-tracking.yml  dashboard-a11y.yml  dashboard-pages.yml  desktop-release.yml  firmware-ci.yml  firmware-qemu.yml  fix-regression-guard.yml  nvsim-server-docker.yml  pointcloud-pages.yml  security-scan.yml  sensing-server-docker.yml  threejs-pages.yml  update-submodules.yml  verify-pipeline.yml
.roo/: modes.json
assets/sensors/: README.md
config/: spatial-layout.json
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: app.css  main.ts
demo-single-esp32s3/: README.md  check_esp32.py
docker/: .env.example  Dockerfile.python  Dockerfile.rust  docker-compose.yml
docker/bridge/: Dockerfile  README.md  bridge.py  requirements.txt
docs/: TROUBLESHOOTING.md  WITNESS-LOG-028.md  architecture.md  build-guide.md  claude-swarm.md  dev-handbook.md  esp32c3-c6-setup.md  security-audit-wasm-edge-vendor.md  use-cases.md  user-guide.md
docs/adr/: .issue-177-body.md  ADR-002-ruvector-rvf-integration-strategy.md  ADR-012-esp32-csi-sensor-mesh.md  ADR-013-feature-level-sensing-commodity-gear.md  ADR-014-sota-signal-processing.md  ADR-015-public-dataset-training-strategy.md  ADR-016-ruvector-integration.md  ADR-017-ruvector-signal-mat-integration.md  ADR-018-esp32-dev-implementation.md  ADR-019-sensing-only-ui-mode.md  ADR-020-rust-ruvector-ai-model-migration.md  ADR-021-vital-sign-detection-rvdna-pipeline.md  ADR-022-windows-wifi-enhanced-fidelity-ruvector.md  ADR-023-trained-densepose-model-ruvector-pipeline.md  ADR-024-contrastive-csi-embedding-model.md  ADR-025-macos-corewlan-wifi-sensing.md  ADR-026-survivor-track-lifecycle.md  ADR-027-cross-environment-domain-generalization.md  ADR-028-esp32-capability-audit.md  ADR-029-ruvsense-multistatic-sensing-mode.md  ADR-030-ruvsense-persistent-field-model.md  ADR-031-ruview-sensing-first-rf-mode.md  ADR-032-multistatic-mesh-security-hardening.md  ADR-033-crv-signal-line-sensing-integration.md  ADR-034-expo-mobile-app.md  ADR-035-live-sensing-ui-accuracy.md  ADR-036-rvf-training-pipeline-ui.md  ADR-037-multi-person-pose-detection.md  ADR-038-sublinear-goal-oriented-action-planning.md  ADR-039-esp32-edge-intelligence.md  ADR-040-wasm-programmable-sensing.md  ADR-041-wasm-module-collection.md  ADR-042-coherent-human-channel-imaging.md  ADR-043-sensing-server-ui-api-completion.md  ADR-044-geospatial-satellite-integration.md  ADR-044-provisioning-tool-enhancements.md  ADR-045-amoled-display-support.md  ADR-046-android-tv-box-armbian-deployment.md  ADR-047-psychohistory-observatory-visualization.md  ADR-048-adaptive-csi-classifier.md  (+55 more)
docs/benchmarks/: pose-estimation-cog.md
docs/ddd/: README.md  chci-domain-model.md  deployment-platform-domain-model.md  hardware-platform-domain-model.md  ruvsense-domain-model.md  sensing-server-domain-model.md  signal-processing-domain-model.md  training-pipeline-domain-model.md
docs/edge-modules/: README.md  adaptive-learning.md  ai-security.md  autonomous.md  building.md  core.md  exotic.md  industrial.md  medical.md  retail.md  security.md  signal-intelligence.md  (+1 more)
firmware/esp32-csi-node/components/ruv_temporal/: CMakeLists.txt  Cargo.toml  README.md  rust-toolchain.toml  shim.c
firmware/esp32-csi-node/components/ruv_temporal/.cargo/: config.toml
firmware/esp32-csi-node/components/ruv_temporal/include/: ruv_temporal.h
firmware/esp32-csi-node/components/ruv_temporal/src/: lib.rs  weights.rs  window.rs
firmware/esp32-csi-node/main/: CMakeLists.txt  Kconfig.projbuild  adaptive_controller.c  csi_collector.c  csi_collector.h  display_ui.c  edge_processing.c  edge_processing.h  idf_component.yml  main.c  nvs_config.c  nvs_config.h  ota_pull.c  ota_pull.h  ota_update.c  ota_update.h  rv_feature_state.h  rv_radio_ops.h  rv_radio_ops_esp32.c  temporal_task.c  temporal_task.h  wasm_runtime.c  wasm_upload.c
nvsim/: index.html  sw.js  sw.js.map
scripts/: benchmark-rf-scan.js  collect-training-data.py  csi-graph-visualizer.js  csi-spectrogram.js  csi_node_id_relay.py  deep-scan.js  device-fingerprint.js  fix-markers.json  gait-analyzer.js  generate-replay-fixtures.py  generate-witness-bundle.sh  generate_nvs_matrix.py  inject_fault.py  install-macos.sh  install-qemu.sh  material-classifier.js  material-detector.js  mesh-graph-transformer.js  mincut-person-counter.js  ota-deploy.sh  passive-radar.js  probe-fft-platform.py  qemu-chaos-test.sh  qemu-cli.sh  qemu-esp32s3-test.sh  qemu-mesh-test.sh  qemu-snapshot-test.sh  record-baseline.py  record-csi-udp.py  rf-scan-multifreq.js  rf-scan.js  rf-tomography.js  seed_csi_bridge.py  snn-csi-processor.js  test_csi_node_id_relay.py  through-wall-detector.js  validate_mesh_test.py  validate_qemu_output.py
tools/: csi_inspector.py
ui/: README.md  app.js  heatmap.html  index.html  observatory.html  pose-fusion.html  raw.html  spatial.html  style.css  viz.html
v2/: Cargo.toml
v2/crates/cog-pose-estimation/: Cargo.toml
v2/crates/cog-pose-estimation/cog/: README.md
v2/crates/cog-pose-estimation/src/: inference.rs  main.rs  publisher.rs
v2/crates/cog-pose-estimation/tests/: smoke.rs
v2/crates/nvsim/: Cargo.toml  README.md
v2/crates/nvsim/src/: lib.rs  wasm.rs
v2/crates/wifi-densepose-temporal/: Cargo.toml  README.md  benches_results.md
v2/crates/wifi-densepose-temporal/examples/: bench_speedup.rs  init_random_blob.rs
v2/crates/wifi-densepose-temporal/src/: config.rs  dense.rs  error.rs  lib.rs  sparse.rs  weights.rs
v2/crates/wifi-densepose-temporal/tests/: blob_e2e.rs  dense_vs_sparse.rs  smoke.rs  streaming.rs  weight_blob.rs
wifi_densepose/: __init__.py
(+356 files in other folders)
